test-data/compiletest-rs/ui/macros/unreachable-format-arg.mir
// WARNING: This output format is intended for human consumers only
// and is subject to change without notice. Knock yourself out.
fn main() -> () {
    let mut _0: ();
    let _1: i32;
    let _2: !;
    let _3: &&str;
    let _4: &str;
    scope 1 {
        debug x => _1;
    }

    bb0: {
        _1 = const 5_i32;
        _4 = const "x is {x}";
        _3 = &_4;
        _2 = core::panicking::unreachable_display::<&str>(_3);
    }
}
